--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "job_system"
+name = "task_system"
 version = "0.1.0"
 authors = ["Squares <m.piotr@moscicki.pl>"]
 edition = "2018"
